@@ -11,3 +11,4 @@ DISTANCE	2
 MINREL		98
 RELFINAL	99
 MAXLAT		36h
+MINLAT		5m
