@@ -245,6 +245,12 @@ Only select remailers with a latency of at most
 Default:
 .BR 36h .
 .TP
+.B MINLAT
+Only select remailers with a latency of at least
+.IR MINLAT .
+Default:
+.BR 5m .
+.TP
 .B PGPPUBRING
 Path to your public PGP key ring. Default:
 .BR ~/.pgp/pubring.pkr .
